# riicli

./: Cargo.toml  README.md
frontend/: package-lock.json
frontend/src/components/: HelloWorld.vue
src/: constants.rs  main.rs  privesc.rs  privesc_bin.rs  recon.rs  recon_bin.rs  schemas.rs  server.rs  servers.rs  utils.rs  winapi.rs
src/clients/: tcp.rs  udp.rs
src/privesc/: find_always_install_elevated.rs  find_hijackable_dlls_path.rs  find_hijackable_dlls_process.rs  find_modifiable_service_files.rs  find_modifiable_services.rs  find_modifiable_task_files.rs  find_registry_auto_logon.rs  find_restartable_services.rs  find_unattended_install_files.rs  find_unquoted_services.rs  find_web_config.rs  invoke_service_abuse.rs  is_local_admin.rs
src/recon/: get_computer_detail.rs
src/servers/: http.rs  tcp.rs  udp.rs
src/winapi/: acl.rs  ad.rs  eventlog.rs  process.rs  registry.rs  service.rs  tasks.rs  token.rs  users.rs  wmi.rs
