[package]
name = "riicli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

axum = "0.8.0-rc-1"
clap = { version = "4.0" }
log = { version = "0.4.21" }
env_logger = { version = "0.11.3" }
futures = { version = "0.3" }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = { version = "1.0.117" }
widestring = { version = "1.1.0" }
roxmltree = { version = "0.20.0" }
tokio = { version = "1.38.0", features = ["full"] }
windows-targets = { version = "0.52.5" }
windows-core = { version = "0.56.0" }
windows = { version = "0.56.0", features = [
   "implement",
  "Win32_Foundation",
  "Win32_System_Variant",
  "Win32_Security",
  "Win32_Security_Authorization",
  "Win32_System_Com",
  "Win32_System_Ole",
  "Win32_System_Rpc",
  "Win32_System_SystemServices",
  "Win32_System_Services",
  "Win32_System_Threading",
  "Win32_System_WindowsProgramming",
  "Win32_System_Wmi",
  "Win32_Storage_FileSystem",
  "Win32_NetworkManagement_NetManagement",
  "Win32_System_TaskScheduler",
  "Win32_System_ProcessStatus",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_Environment",
  "Win32_System_Registry",
  "Win32_System_ProcessStatus",
  "Win32_System_EventLog",
  "Win32_System_LibraryLoader",
  "Win32_Networking_ActiveDirectory",
  "Win32_Networking_Ldap",
] }
http = "1.2.0"
tower-http = { version = "0.6.2", features = ["cors"] }
